load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:defs.bzl", "smithy_cpp_client_library", "smithy_cpp_server_library")

# Union x protocol conformance cells (issue #48): union round-tripping was
# only pinned for simpleRestJson; the cbor and jsonRpc2 cells relied on
# seeded random integration tests that flip a coin on whether the union
# appears and can only prove serde self-consistency. These suites pin the
# wire subdocument for every SinkChoice variant deterministically — client
# encode/decode and server decode/echo — plus the reject cells and the
# __type discriminator tolerance. Hand-written (not generated), so they
# live outside the golden generated/ trees.

# The accessor contract (issue #49): wrong-case as_x() dies with the union,
# requested, and engaged member named; as_x_or_null/case_name/visit are the
# never-dying alternatives. Pinned against the cafe example's OrderStatus.
cc_test(
    name = "union_accessor_test",
    size = "small",
    srcs = ["union_accessor_test.cc"],
    deps = [
        "//examples/cafe/generated:types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "union_cbor_test",
    size = "small",
    srcs = ["union_cbor_test.cc"],
    deps = [
        "//examples/roundtrip/rpc/generated:client",
        "//examples/roundtrip/rpc/generated:server",
        "//runtime:cbor",
        "//runtime:client",
        "//runtime:http",
        "//runtime:protocol_test_support",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "union_jsonrpc2_test",
    size = "small",
    srcs = ["union_jsonrpc2_test.cc"],
    deps = [
        "//examples/roundtrip/jsonrpc/generated:client",
        "//examples/roundtrip/jsonrpc/generated:server",
        "//runtime:client",
        "//runtime:http",
        "//runtime:json",
        "//runtime:protocol_test_support",
        "@googletest//:gtest_main",
    ],
)

# The union member-type gauntlet (issue #56): generated through the same
# in-graph path as codegen/compile-tests, so the member kinds SinkChoice
# lacks (blob, timestamp, list, map, enum, intEnum, recursion, error-shape
# unions) get their four-direction cells without touching any golden tree.

UNION_MODEL = ["model/unions.smithy"]

smithy_cpp_client_library(
    name = "gauntlet_cbor_client",
    srcs = UNION_MODEL + ["model/bindings/rpcv2cbor.smithy"],
    namespace = "compile::unions::cbor",
    service = "compile.unions#UnionGauntlet",
)

smithy_cpp_server_library(
    name = "gauntlet_cbor_server",
    srcs = UNION_MODEL + ["model/bindings/rpcv2cbor.smithy"],
    namespace = "compile::unions::cbor",
    service = "compile.unions#UnionGauntlet",
)

smithy_cpp_client_library(
    name = "gauntlet_jsonrpc_client",
    srcs = UNION_MODEL + ["model/bindings/jsonrpc2.smithy"],
    namespace = "compile::unions::jsonrpc",
    service = "compile.unions#UnionGauntlet",
)

smithy_cpp_server_library(
    name = "gauntlet_jsonrpc_server",
    srcs = UNION_MODEL + ["model/bindings/jsonrpc2.smithy"],
    namespace = "compile::unions::jsonrpc",
    service = "compile.unions#UnionGauntlet",
)

cc_test(
    name = "union_gauntlet_cbor_test",
    size = "small",
    srcs = ["union_gauntlet_cbor_test.cc"],
    deps = [
        ":gauntlet_cbor_client",
        ":gauntlet_cbor_server",
        "//runtime:cbor",
        "//runtime:client",
        "//runtime:http",
        "//runtime:protocol_test_support",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "union_gauntlet_jsonrpc2_test",
    size = "small",
    srcs = ["union_gauntlet_jsonrpc2_test.cc"],
    deps = [
        ":gauntlet_jsonrpc_client",
        ":gauntlet_jsonrpc_server",
        "//runtime:client",
        "//runtime:http",
        "//runtime:json",
        "//runtime:protocol_test_support",
        "@googletest//:gtest_main",
    ],
)
