load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "no_input_body_wire_test",
    size = "small",
    srcs = ["no_input_body_wire_test.cc"],
    deps = [
        "//examples/roundtrip/rpc/generated:server",
        "//runtime:http",
        "//runtime:protocol_test_support",
        "@googletest//:gtest_main",
    ],
)
